# supplieronboardingagent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run.bat
.github/workflows/: ci.yml
app/: __init__.py  config.py  main.py
app/agent/: graph.py  nodes.py  prompts.py  state.py
app/connectors/: base.py  cloud.py  erp.py  faults.py  procurement.py  reset.py
app/data/: suppliers_seed.json
app/domain/: matching.py  models.py  time_utils.py
app/llm/: anthropic_provider.py  base.py  factory.py  http_client.py  mock.py  openai_provider.py
app/memory/: store.py
app/observability/: guardrails.py  logging.py
app/tools/: registry.py  service.py
scripts/: smoke_test.py
slides/: index.html
tests/: conftest.py  test_api.py  test_connectors.py  test_graph.py  test_guardrails.py  test_isolation.py  test_llm_factory.py  test_matching.py  test_memory.py  test_mock_llm.py  test_status.py
web/: app.js  index.html  styles.css
